@@ -1,3 +1,8 @@
+2013-03-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* src/dpxfile.c: Change dpx_create_temp_file() because tmpnam()
+	sometimes fails on Windows.
+
 2013-03-20  Khaled Hosny  <khaledhosny@eglug.org> 
 
 	* spc_dvips.c (spc_handler_ps_tricks_pdef, spc_handler_ps_tricks_tdef,
